--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Fiction'
+- GITenberg
 tableOfContents: A escola de flirt -- Flirts -- Logica -- Romantico -- A Bisantina
   -- Má-lingua -- A rainha de Sabá -- Chiara Liliam -- A Marcia -- O cego -- A gloria
   -- A festa de maio -- Tibidabo -- A princeza perdida -- Noite de festa -- Clara
